--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&display=swap');
+@import url('https://fonts.bunny.net/css?family=noto-sans-sc:100,200,300,400,500,600,700,800,900|raleway:500,700');
 
 @import 'viewerjs/dist/viewer.css';
+@import './animations.css';
+@import './transitions.css';
 
 @import 'tailwindcss';
 @plugin "@tailwindcss/typography";
@@ -19,6 +22,52 @@
 
 html {
 	min-height: 100%;
+}
+
+/* Yukina-style CSS Variables */
+:root {
+	--hue: 300;
+
+	--primary-color: oklch(70% 0.15 var(--hue));
+	--primary-color-lighten: oklch(95% 0.02 var(--hue));
+	--primary-color-hover: oklch(90% 0.025 var(--hue));
+	--primary-color-transparent: oklch(70% 0.15 var(--hue) / 15%);
+	--text-color: oklch(30% 0 0);
+	--text-color-lighten: oklch(50% 0 0);
+	--card-color: oklch(100% 0 0);
+	--card-color-transparent: oklch(100% 0 0 / 85%);
+	--background-color: oklch(97% 0.01 var(--hue));
+
+	--brand-font: "Raleway", "Noto Sans SC", sans-serif;
+	--primary-font: "Noto Sans SC", sans-serif;
+	--code-font: "JetBrains Mono", "Fira Code", monospace;
+
+	--page-width-lg: 992px;
+	--page-width-xl: 1264px;
+
+	--banner-height: 55vh;
+	--title-font: var(--brand-font);
+	--title-color: oklch(0% 0 0);
+	--subtitle-font: var(--brand-font);
+	--subtitle-color: oklch(0% 0 0);
+	--subtitle-color-dark: oklch(95% 0.002 var(--hue));
+
+	--onload-animation-delay: 100ms;
+	--onload-animation-interval: 100ms;
+}
+
+:root.dark {
+	--primary-color: oklch(70% 0.125 var(--hue));
+	--primary-color-lighten: oklch(40% 0.04 var(--hue));
+	--primary-color-hover: oklch(20% 0.015 var(--hue));
+	--text-color: oklch(95% 0.002 var(--hue));
+	--text-color-lighten: oklch(90% 0.002 var(--hue));
+	--card-color: oklch(25% 0.02 var(--hue));
+	--card-color-lighten: oklch(40% 0.04 var(--hue));
+	--card-color-transparent: oklch(30% 0.025 var(--hue) / 85%);
+	--background-color: oklch(17.5% 0.015 var(--hue));
+	--title-color: oklch(100% 0 0 / 95%);
+	--subtitle-color: oklch(100% 0 0 / 85%);
 }
 
 @theme {
